# minotar

./: .gitignore  CMakeLists.txt  README  README.md
examples/: CMakeLists.txt  basic_tar_stream.c  tar_gz_extract.c
include/: minotar.h
src/: minotar_extract.c  minotar_internal.h  minotar_tarball_data.h
